--- a/.env
+++ b/.env
@@ -5,9 +5,9 @@ VITE_GLOB_APIROBOT_URL=/sqacp
 VITE_GLOB_APILOG_URL=/spost
 
 VITE_APP_API_STREAM_URL=localhost.220:18090/ # 大模型问答
-VITE_APP_API_AUTH_URL=localhost.73:18400/ # 用户体系
-VITE_APP_API_ROBOT_URL=localhost.73:18800/ # 问答控制台
-VITE_APP_API_LOG_URL=localhost.73:18700/ # 后分析
+VITE_APP_API_AUTH_URL=localhost:18400/ # 用户体系
+VITE_APP_API_ROBOT_URL=localhost:18800/ # 问答控制台
+VITE_APP_API_LOG_URL=localhost:18700/ # 后分析
 # Whether long replies are supported, which may result in higher API fees
 VITE_GLOB_OPEN_LONG_REPLY=false
 
